--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,3 +1,8 @@
+<section class="main-header">
+ <p class="flash"><%= notice %><%= alert %></p>
+ <img src="<%= asset_path "achieve.png" %>">
+</section>
+
 <!doctype html>
 <html lang="ja">
 <head>
@@ -8,9 +13,6 @@
 </head>
 <body>
   
-  <section class="main-header">
-    <img src="<%= asset_path "achieve.png" %>">
-  </section>
   <section class="about">
     <h1>About Achieve</h1>
     <p>
