--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -3,14 +3,12 @@
   <p><%= notice %></p>
   <h1>ブログ一覧</h1>
    <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
-    <% @blogs.each do |blog| %>
+    <% @blogs.reverse_each do |blog| %>
      <div class="row">
      <h4><strong><%= blog.title %></strong></h4>
      <p><%= blog.content %></p>
-      <% @users.each do |user| %>
-    <%= user.name %>
-    <% end %>
-    <br>
+     <p><%= blog.user.name %></p>
+     <br>
      <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
      <%= link_to "削除", blog_path(blog.id), method: :delete, data: {confirm: '本当に削除していいですか？'},class: 'btn btn-default btn-sm btn btn-danger' %>
      </div>
