--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,22 +3,22 @@
 <h2>ユーザ編集 </h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= f.error_messages! %>
 
   <div class="field">
     <%= f.email_field :email, autofocus: true, class: "form-control", placeholder:"メールアドレス" %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.text_field :name, class: "form-control",placeholder:"名前" %>
   </div>
   <br>
-  
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-  
+
   <div class="field">
     <%= f.password_field :password, autocomplete: "off",class: "form-control",placeholder:"パスワード" %>
      <% if @minimum_password_length %>
@@ -26,17 +26,17 @@
     <% end %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control",placeholder:"パスワード（確認）" %>
   </div>
   <br>
-  
+
   <div class="field">
     <%= f.password_field :current_password, autocomplete: "off",class: "form-control",placeholder:"現在のパスワード" %>
   </div>
   <br>
-  
+
   <div class="actions">
     <%= f.submit "アップデート", class: "btn btn-primary btn-block" %>
   </div>
