--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
    <h2>サインアップ</h2>
 
    <%= form_for(resource, as: resource_name, url: user_registration_path) do |f| %>
-    <%= devise_error_messages! %>
+    <%= f.error_messages! %>
 
     <div class="field">
      <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
@@ -14,12 +14,12 @@
      <%= f.text_field :name, class: "form-control", placeholder: "名前" %>
     </div>
     <br>
-    
+
     <div class="field">
      <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "パスワード" %>
     </div>
     <br>
-    
+
     <div class="field">
      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
     </div>
